--- a/app/src/main/res/drawable/alert.xml
+++ b/app/src/main/res/drawable/alert.xml
@@ -1,6 +1,6 @@
-<vector android:height="24dp" android:tint="#FF3F5B"
+<vector android:height="@dimen/_24sdp" android:tint="#FF3F5B"
     android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:width="@dimen/_24sdp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M16.9552,8.662l2.1207,-2.1222l1.4148,1.4138l-2.1207,2.1222z"/>
     <path android:fillColor="@android:color/white" android:pathData="M2,18h20v2h-20z"/>
     <path android:fillColor="@android:color/white" android:pathData="M11,4h2v3h-2z"/>
