--- a/app/src/main/res/drawable/contact_bg.xml
+++ b/app/src/main/res/drawable/contact_bg.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="10dp" />
+    <corners android:radius="@dimen/_10sdp" />
 
     <stroke android:color="@color/sos_color"
-        android:width="2dp"/>
+        android:width="@dimen/_2sdp"/>
 </shape>
