--- a/app/src/main/res/drawable/home_icon_bg.xml
+++ b/app/src/main/res/drawable/home_icon_bg.xml
@@ -4,106 +4,106 @@
     <item>
         <shape android:shape="oval">
             <padding
-                android:bottom="3dp"
-                android:left="3dp"
-                android:right="3dp"
-                android:top="3dp" />
+                android:bottom="@dimen/_3sdp"
+                android:left="@dimen/_3sdp"
+                android:right="@dimen/_3sdp"
+                android:top="@dimen/_3sdp" />
 
             <solid android:color="#00CCCCCC" />
 
-            <corners android:radius="3dp" />
+            <corners android:radius="@dimen/_3sdp" />
         </shape>
     </item>
     <item>
         <shape android:shape="oval">
             <padding
-                android:bottom="3dp"
-                android:left="3dp"
-                android:right="3dp"
-                android:top="3dp" />
+                android:bottom="@dimen/_3sdp"
+                android:left="@dimen/_3sdp"
+                android:right="@dimen/_3sdp"
+                android:top="@dimen/_3sdp" />
 
             <solid android:color="#10CCCCCC" />
 
-            <corners android:radius="3dp" />
+            <corners android:radius="@dimen/_3sdp" />
         </shape>
     </item>
     <item>
         <shape android:shape="oval">
             <padding
-                android:bottom="3dp"
-                android:left="3dp"
-                android:right="3dp"
-                android:top="3dp" />
+                android:bottom="@dimen/_3sdp"
+                android:left="@dimen/_3sdp"
+                android:right="@dimen/_3sdp"
+                android:top="@dimen/_3sdp" />
 
             <solid android:color="#20CCCCCC" />
 
-            <corners android:radius="3dp" />
+            <corners android:radius="@dimen/_3sdp" />
         </shape>
     </item>
     <item>
         <shape android:shape="oval">
             <padding
-                android:bottom="3dp"
-                android:left="3dp"
-                android:right="3dp"
-                android:top="3dp" />
+                android:bottom="@dimen/_3sdp"
+                android:left="@dimen/_3sdp"
+                android:right="@dimen/_3sdp"
+                android:top="@dimen/_3sdp" />
 
             <solid android:color="#30CCCCCC" />
 
-            <corners android:radius="3dp" />
+            <corners android:radius="@dimen/_3sdp" />
         </shape>
     </item>
     <item>
         <shape android:shape="oval">
             <padding
-                android:bottom="3dp"
-                android:left="3dp"
-                android:right="3dp"
-                android:top="3dp" />
+                android:bottom="@dimen/_3sdp"
+                android:left="@dimen/_3sdp"
+                android:right="@dimen/_3sdp"
+                android:top="@dimen/_3sdp" />
 
             <solid android:color="#40CCCCCC" />
 
-            <corners android:radius="3dp" />
+            <corners android:radius="@dimen/_3sdp" />
         </shape>
     </item>
     <item>
         <shape android:shape="oval">
             <padding
-                android:bottom="3dp"
-                android:left="3dp"
-                android:right="3dp"
-                android:top="3dp" />
+                android:bottom="@dimen/_3sdp"
+                android:left="@dimen/_3sdp"
+                android:right="@dimen/_3sdp"
+                android:top="@dimen/_3sdp" />
 
             <solid android:color="#50CCCCCC" />
 
-            <corners android:radius="3dp" />
+            <corners android:radius="@dimen/_3sdp" />
         </shape>
     </item>
     <item>
         <shape android:shape="oval">
             <padding
-                android:bottom="3dp"
-                android:left="3dp"
-                android:right="3dp"
-                android:top="3dp" />
+                android:bottom="@dimen/_3sdp"
+                android:left="@dimen/_3sdp"
+                android:right="@dimen/_3sdp"
+                android:top="@dimen/_3sdp" />
 
             <solid android:color="#60CCCCCC" />
 
-            <corners android:radius="3dp" />
+            <corners android:radius="@dimen/_3sdp" />
         </shape>
     </item>
 
     <item>
         <shape android:shape="oval">
             <padding
-                android:bottom="3dp"
-                android:left="3dp"
-                android:right="3dp"
-                android:top="3dp" />
+                android:bottom="@dimen/_3sdp"
+                android:left="@dimen/_3sdp"
+                android:right="@dimen/_3sdp"
+                android:top="@dimen/_3sdp" />
 
             <solid android:color="@color/white" />
 
-            <corners android:radius="3dp" />
+            <corners android:radius="@dimen/_3sdp" />
         </shape>
     </item>
 
@@ -112,7 +112,7 @@
         <shape android:shape="oval">
             <solid android:color="@color/sos_color" />
 
-            <corners android:radius="3dp" />
+            <corners android:radius="@dimen/_3sdp" />
         </shape>
     </item>
 </layer-list>
