--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="108dp"
-    android:height="108dp"
+    android:width="@dimen/_108sdp"
+    android:height="@dimen/_108sdp"
     android:viewportWidth="24"
     android:viewportHeight="24"
     android:tint="#FFFFFF">
