--- a/app/src/main/res/drawable/list_bg.xml
+++ b/app/src/main/res/drawable/list_bg.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="100dp" />
+    <corners android:radius="@dimen/_100sdp" />
 
     <solid android:color="#ff3f5b"/>
 </shape>
