--- a/app/src/main/res/drawable/progress_bg.xml
+++ b/app/src/main/res/drawable/progress_bg.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="10dp" />
+    <corners android:radius="@dimen/_10sdp" />
 
     <solid android:color="#77ffffff"/>
 </shape>
